fixing layout break(home )

--- a/portfolio/app/globals.css
+++ b/portfolio/app/globals.css
@@ -91,23 +91,3 @@ body {
     @apply bg-background text-foreground;
   }
 }
-h1,
-h2 {
-  @apply leading-tight tracking-tight text-[#ececec];
-}
-
-h1 {
-  @apply font-semibold text-4xl;
-}
-
-h2 {
-  @apply font-semibold text-xl mb-2;
-}
-
-p {
-  @apply leading-normal py-2 text-[#ececec];
-}
-
-section {
-  @apply my-8;
-}
